kubernetes/apps/metrics/traefik/metrics-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/traefik/metrics`)
      kind: Rule
      services:
        - name: prometheus@internal
          kind: TraefikService
      middlewares:
        - name: metrics-basic-auth
        - name: strip-first-segment
